# paf

./: LICENSE  Makefile  Makefile.am  README.md  configure.ac  index.html  pytest.ini  setup.py
app/: pafbench  pafbench.in  pafc  pafc.in  pafd  pafd.in
conf/: pafd-example.conf
devtools/: check-release.py
doc/: PROTOCOL.md  pub_client_long_disconnect.plantuml  pub_client_short_disconnect.plantuml  server_restart.plantuml  sub_client_long_disconnect.plantuml  sub_client_short_disconnect.plantuml
doc/man/: pafc.1.md  pafd.8.md
doc/protocol/: PROTOCOLv2.md  PROTOCOLv3.md
man/: pafc.1.html  pafd.8.html  pafd.8.md
paf/: __init__.py  client.py  compat.py  conf.py  daemon.py  eventloop.py  filter.py  logging.py  props.py  proto.py  sd.py  server.py  timer.py  xcm.py
test/: cert.yaml  conftest.py  cpu_speed.py  feature.py  gencert.py  pytest.ini  test_eventloop.py  test_filter.py  test_paf.py  test_timer.py
test/cert/: cert.conf
